--- a/public/signup.html
+++ b/public/signup.html
@@ -296,7 +296,7 @@
                 const userData = { fullName, subject, email, password,Class };
             
                 try {
-                    const response = await fetch("http://localhost:5000/signup", {
+                    const response = await fetch("/api/signup", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json"
