--- a/public/studentlogin.html
+++ b/public/studentlogin.html
@@ -194,7 +194,7 @@
             const userData = { email, password };
 
             try {
-                const response = await fetch("http://localhost:5000/studentlogin", {
+                const response = await fetch("/api/studentlogin", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify(userData)
