--- a/public/index.html
+++ b/public/index.html
@@ -346,7 +346,7 @@ document.getElementById("stop").addEventListener("click", async () => {
         const formData = new FormData();
         formData.append("audio", audioBlob, "recording.wav");
 
-        const response = await fetch("http://localhost:5000/upload", {
+        const response = await fetch("/api/upload", {
             method: "POST",
             body: formData
         });
