--- a/public/studentsignup.html
+++ b/public/studentsignup.html
@@ -297,7 +297,7 @@
                 const userData = { fullName, Rollno, email, password,Class };
             
                 try {
-                    const response = await fetch("http://localhost:5000/studentsignup", {
+                    const response = await fetch("/api/studentsignup", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json"
